[project]
name = "secure data encryption system"
version = "0.1.0"
description = ""
authors = [
    {name = "fizahafeez",email = "fizahafeez405@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
